# dbt-ui

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
backend/: .gitignore  README.md  auth.py  main.py  models.py  pyproject.toml
backend/routes/: dbt_routes.py  env_routes.py  file_routes.py  git_routes.py  metadv_routes.py  venv_routes.py
backend/utils/: dbt_utils.py  input_validation.py  merge_utils.py  operation_lock.py  subprocess_utils.py  venv_utils.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.js  App.tsx  index.css  vite-env.d.ts
frontend/src/components/dbt/: DbtRunModal.css  DbtRunModal.tsx  EnvVarsModal.css  EnvVarsModal.tsx
frontend/src/components/editor/: ConflictModal.css  ConflictModal.tsx  DataTable.css  DataTable.tsx  Editor.css  Editor.tsx  GraphView.css  GraphView.tsx  LineageGraph.css  LineageGraph.tsx  MetadataSidebar.css  MetadataSidebar.tsx  TableEditor.tsx
frontend/src/components/git/: GitCredentialsDialog.css  GitCredentialsDialog.tsx  GitModal.css  GitModal.tsx  GitSetupDialog.css  GitSetupDialog.tsx
frontend/src/components/main/: ConfirmModal.css  ConfirmModal.tsx  FolderBrowser.css  FolderBrowser.tsx  LogResultModal.css  LogResultModal.tsx  MainLayout.css  MainLayout.tsx  ProjectPathDialog.css  ProjectPathDialog.tsx  Sidebar.css  Sidebar.tsx  UnsavedChangesModal.css  UnsavedChangesModal.tsx
frontend/src/config/: api.ts
(+44 files in other folders)
